--- a/src/assets/loginPage.css
+++ b/src/assets/loginPage.css
@@ -8,6 +8,8 @@
 }
 
 .form-input {
+    width: 100%;
+    max-width: 240px;
     border-radius: 4px;
     border: 1px solid var(--mainColor);
     transition-duration: .2s;
@@ -17,7 +19,7 @@
 .sign-in-button {
     display: block;
     width: 180px;
-    margin: 10px auto 0;
+    margin: 10px auto;
     background-color: var(--mainColor);
     color: #fff;
     border: 0;
@@ -27,16 +29,16 @@
     transition-duration: .2s;
 }
 
-.sign-in-button:hover {
+.sign-in-button:not(:disabled):hover {
     scale: 1.02;
 }
 
-.sign-up {
-    margin-top: 10px;
+.sign-in-button:disabled {
+    filter: opacity(.8);
 }
 
 @media (min-width: 1001px) {
     .login-title {
-        max-width: 45%;
+        max-width: 40%;
     }
 }
